--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 Jens Kötterheinrich <jkh@beckmann-partner.de>
 2020-12-09
 
-= Settings
+== Settings
 
 Add toolchains.xml in your .m2 folder (Maven).
 You have to customize the folders in the file for your environment.
